src/objects/TRAK_Release_Tracker__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Community_Domain_Name__c</fullName>
        <label>Community Domain Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disable_Approval_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Approval Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sandbox_Refresh_Approver__c</fullName>
        <label>Sandbox Refresh Approver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TRAK Release Tracker</label>
</CustomObject>